<resources>
    <string name="app_name">AndroidDemos</string>

    <!-- common string -->
    <string name="common_send">send</string>

    <string name="anim_screen_compat">Screen Anim</string>
    <string name="jni_test">Jni Test</string>

    <!-- token test -->
    <string name="token_test">Token Test</string>
    <string name="get_token">Get the token</string>
    <string name="request_api">Request the api</string>

    <!-- service test -->
    <string name="intent_service_test">IntentService Test</string>

    <!-- instant run test -->
    <string name="instant_run_hot_test">Instant Run Hot Test</string>

    <!-- react native test -->
    <string name="react_native_test">React Native Test</string>

    <!-- aidl test -->
    <string name="aidl_test">AIDL Test</string>

    <!-- canvas cover test -->
    <string name="canvas_cover_test">CANVAS COVER Test</string>


</resources>
