<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lighters.demos.MainActivity">

    <Button
        android:id="@+id/btn_screen_anim"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:gravity="center"
        android:text="@string/anim_screen_compat"
        android:textSize="@dimen/font_size_16"/>

    <Button
        android:id="@+id/btn_jni_test"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:gravity="center"
        android:text="@string/jni_test"
        android:textSize="@dimen/font_size_16"/>

    <Button
        android:id="@+id/btn_token_test"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:gravity="center"
        android:text="@string/token_test"
        android:textSize="@dimen/font_size_16"/>

    <Button
        android:id="@+id/btn_intent_service_test"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:gravity="center"
        android:text="@string/intent_service_test"
        android:textSize="@dimen/font_size_16"/>

    <Button
        android:id="@+id/btn_instant_run_hot_test"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:gravity="center"
        android:text="@string/instant_run_hot_test"
        android:textSize="@dimen/font_size_16"/>

    <Button
        android:id="@+id/btn_rn_test"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:gravity="center"
        android:text="@string/react_native_test"
        android:textSize="@dimen/font_size_16"/>
    <Button
        android:id="@+id/btn_aidl_test"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:gravity="center"
        android:text="@string/aidl_test"
        android:textSize="@dimen/font_size_16"/>
</LinearLayout>
